--- a/courses/csci415-f2022/warmup.html
+++ b/courses/csci415-f2022/warmup.html
@@ -29,6 +29,8 @@
         <a href="../csci415-common/memory-management/index.html" class="list-group-item list-group-item-action">Memory Management</a>
         <a href="../csci415-common/make/index.html" class="list-group-item list-group-item-action">Make</a>
         <a href="../csci415-common/read-lines/index.html" class="list-group-item list-group-item-action">Reading a File Line-by-Line</a>
+        <a href="../csci415-common/struct/slides/struct.pdf" class="list-group-item list-group-item-action">C structs</a>
+        <a href="../csci415-common/list/index.html" class="list-group-item list-group-item-action">Linked Lists</a>
       </div>
 
     </div>
